...
    }

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(backgroundColor)
            .testTag("tela_home"),
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
                .padding(horizontal = 16.dp)
...
                    ) {
                        Text(
                            text = "Olá, ${perfilUiState.usuario?.nome ?: "Visitante"} ",
                            fontSize = 32.sp,
                            fontWeight = FontWeight.Bold,
                            color = textColor,
                            modifier = Modifier.testTag("titulo_bem_vindo"),
                        )
                        Text(
                            text = "👋",
                            fontSize = 32.sp
                        )
                    }
                    Text(
                        text = "Venha para nossos eventos",
                        fontSize = 18.sp,
                        color = secondaryTextColor,
                        modifier = Modifier.testTag("subtitulo_bem_vindo"),
                    )
                }
            }

            Spacer(modifier = Modifier.height(16.dp))

...
                    searchText = it
                },
                placeholder = { Text("Pesquisar eventos", color = secondaryTextColor) },
                modifier = Modifier
                    .fillMaxWidth()
                    .height(64.dp)
                    .testTag("barra_pesquisa"),
                shape = RoundedCornerShape(32.dp),
                colors = OutlinedTextFieldDefaults.colors(
                    focusedContainerColor = searchBarColor,
                    unfocusedContainerColor = searchBarColor,
                    disabledContainerColor = searchBarColor,
                    focusedBorderColor = searchBarColor,
...
                    fontSize = 16.sp,
                    color = secondaryTextColor,
                    modifier = Modifier.clickable {
                        Log.d(TAG, "Navegando para todos os eventos")
                        navController.navigate(TODOS_EVENTOS_ROUTE)
                    }
                        .testTag("ver_todos_eventos"),
                )
            }

            Spacer(modifier = Modifier.height(16.dp))

            // Botões de filtro
...
